# very-cool-lakehouse

./: .gitignore  README.md
cool-dagster/: .env.example  .gitignore  README.md  pyproject.toml
cool-dagster/.dg/: telemetry.yaml
cool-dagster/.tmp_dagster_home_100n5vih/history/: runs.db
cool-dagster/.tmp_dagster_home_100n5vih/history/runs/: .db  04b51c7f-88d1-4191-bf4e-07a5cca7cb3e.db  2dbea92b-6c10-441d-9393-b9c18bbb4e38.db  5ce9268d-a97f-4023-acf9-db90f2e0ddd4.db  85f9d21f-f5ab-4469-af40-018c72bf643f.db  a32752b9-4a68-4f7f-be43-654942ffbf03.db  index.db
cool-dagster/.tmp_dagster_home_100n5vih/schedules/: schedules.db
cool-dagster/.tmp_dagster_home_100n5vih/storage/: staging_usa_breweries
cool-dagster/.tmp_dagster_home_xjmnpem0/storage/: staging_ger_breweries
cool-dagster/src/cool_dagster/defs/: resources.py
cool-dagster/src/cool_dagster/defs/assets/: breweries.py
cool-dagster/src/cool_dagster/defs/jobs/: breweries_job.py
cool-dagster/src/cool_dagster/utils/: lakehouse_loader.py
lakehouse/: .env.example  pyproject.toml
lakehouse/docker/: docker-compose.yaml
lakehouse/platform/: create_lakehouse_platform.sh
lakehouse/tests/: test.py
lakehouse/transforms/: exploration.ipynb  utils.py
lakehouse/transforms/exploration/: explore_breweries.ipynb
lakehouse/transforms/silver/glb/breweries/: silver_breweries.py
