[project]
name = "lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.43.40",
    "dagster-aws>=0.29.12",
    "grpcio>=1.81.1",
    "grpcio-status>=1.81.1",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pyspark[connect]==3.5.1",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["transforms"]